--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "swagger-ui-express": "^4.0.7",
+    "yamljs": "^0.3.0"
   }
 }
